# matryx_generator

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  matryx-debug.1.txt  matryx-debug.txt
src/: camera.rs  canvas.rs  main.rs
src/scenes/: clock.rs  mod.rs  plasma.rs  sand.rs  wave.rs
